# jwave

./: .changelogrc  .flake8  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  api_conversion.html  api_extras.html  api_geometry.html  api_operators.html  api_phantoms.html  api_signal_processing.html  api_time_harmonic.html  api_time_varying.html  api_utils.html  benchmarks.html  changelog.html  codecov.yml  contributing.html  coverage.xml  dev_requirements.txt  index.html  macros.html  methods.py  mkdocs.yml  mypy.ini  objects.inv  prova.py  prove.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sitemap.xml  (+3 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_docs.yml  ci-build.yml  ci_tests.yml  draft_release.yml  main.yml  regression_test.yml  regression_tests.yml  tests.yml  unit_and_integration_test.yml  unit_integration_tests.yml
.requirements/: requirements-docs.txt  requirements-test.txt  requirements.txt
.setup/: dev_requirements.txt  requirements.txt
docs/: api_acoustics.md  api_conversion.md  api_discretization.md  api_extras.md  api_geometry.md  api_matlab.md  api_ode.md  api_operators.md  api_phantoms.md  api_physics.md  api_signal_processing.md  api_spectral.md  api_time_harmonic.md  api_time_varying.md  api_utils.md  benchmarks.md  develop.md  helmholtz_notes.md  index.md  install.md  macros.py
docs/benchmarks/: README.md  compute_time_vs_size_2d.ipynb  compute_time_vs_size_3d.ipynb  compute_time_vs_timesteps.ipynb  homogeneous.ipynb  homogeneous_vs_kwave.ipynb
docs/examples/: 3d_helmholtz.ipynb  FWI-Copy1.ipynb  FWI.ipynb  differentiate_time_domain_simulations.ipynb  differentiate_trough_solver.ipynb  first_example.ipynb  fwi_wasserstein.ipynb  helmholtz_solver_differentiable.ipynb  homog_skull_properties_optimization.ipynb  include_matlab_computations.ipynb  monopole_helmholtz_problem-Copy1.ipynb  monopole_helmholtz_problem.ipynb  monopole_heterogeneous.ipynb  monopole_homogeneous.ipynb  planet_motion.ipynb  preconditioning.ipynb  spectral_operators.ipynb  uncertainty_propagation.ipynb
docs/htmlcov/: index.html  jwave___init___py.html  jwave__develop_py.html  jwave_geometry_py.html  jwave_linalg_py.html  jwave_matlab_py.html  jwave_ode_py.html  jwave_physics_py.html  jwave_signal_processing_py.html  jwave_spectral_py.html  jwave_utils_py.html  status.json
docs/install/: on_linux.md  on_win.md
docs/notebooks/: FWI.ipynb  Untitled.ipynb  customizing_discretizations.ipynb  customizing_discretizations.md  helmholtz_multiple_discretizations.ipynb  helmholtz_problem.ipynb  helmholtz_solver_differentiable-Copy1.ipynb  helmholtz_solver_differentiable.ipynb  homog_propagation_medium.ipynb  homog_propagation_medium_3d.ipynb  learn_sos.ipynb  monopole_helmholtz_problem.ipynb  prerequisites.ipynb  sim_wave_equation.ipynb  simulate_helmholtz_equation.ipynb  steady_state_bioheat_equation.ipynb  steady_state_heat_equation.ipynb  supported_operations.ipynb  uncertainty_propagation.ipynb  user_interface.ipynb  wave_equation.ipynb
docs/stylesheets/: extra.css
docs/test_reports/: README.md
install/: on_linux.html  on_win.html
jwave/: __about__.py  __init__.py  _develop.py  acoustics.py  core.py  discretization.py  experimental.py  geometry.py  logger.py  matlab.py  ode.py  operators.py  phantoms.py  physics.py  primitives.py  signal_processing.py  spectral.py  transformations.py  utils.py
jwave copy/: __init__.py  geometry.py  signal_processing.py  utils.py
jwave copy/acoustics/: time_harmonic.py  time_varying.py
jwave copy/extras/: __init__.py
jwave/acoustics/: __init__.py  conversion.py  operators.py  pml.py  spectral.py  time_harmonic.py  time_varying.py  time_varying.py.bak
jwave/extras/: __init__.py  engine.py  export.py  external_solvers.py
jwave/ode/: __init__.py  integrators.py  misc.py
jwave/solvers/: __init__.py  _components.py  _preconditioners.py  _processors.py  _solution.py  _solvers.py  solve.py
jwave/solvers_bak/: __init__.py  _algorithms.py  algorithms.py  preconditioners.py  processors.py  solution.py
notebooks/: prerequisites.html  uncertainty_propagation.html
notebooks/harmonic/: helmholtz_problem.html  helmholtz_solver_differentiable.html
notebooks/ivp/: 3d.html  custom_sensors.html  different_discretizations.html  heterogeneous_medium.html  homogeneous_medium.html  homogeneous_medium_backprop.html  homogeneous_medium_sensors.html  off_grid_sensors.html
notebooks/others/: save_video.html
notebooks/time_varying/: FWI.html  point_sources.html
scripts/: get_test_data.sh  jwave_install_wsl.sh  jwave_install_wsl_cpu.sh  jwave_install_wsl_gpu.sh  jwave_win_install.ps1  jwave_win_uninstall.ps1
search/: search_index.json
solvers_tests/: 01_simple_gmres.py  02_scale_gmres.py  03_osnabrugge_gmres.py  04_cbs.py  05_split_preconditioner.py
stylesheets/: extra.css
templates/: changelog_template.md  commit_template.md
test_reports/: index.html  test_report.html
tests/: check_data.ipynb  conftest.py  geometry_test.py  ode_test.py  physics_test.py  profiling.py  signals_test.py  spectral_test.py  test_angular_spectrum_cw.m  test_angular_spectrum_cw.py  test_custom_behaviour.py  test_custom_types.py  test_extras_export.py  test_geometry.py  test_helmholtz.py  test_kwave_3d_ivp.m  test_kwave_3d_ivp.py  test_kwave_convergent_born_series.m  test_kwave_convergent_born_series.py  test_kwave_helmholtz.m  test_kwave_helmholtz.py  test_kwave_helmholtz_fd.py  test_kwave_ivp.m  test_kwave_ivp.py  test_kwave_ivp_fd.py  test_kwave_tvsp.m  test_kwave_tvsp.py  test_off_grid_sensors.py  test_operations.py  test_phantom.py  test_signal_processing.py  test_transformations.py  test_utils.py  utils.py
tests/acoustics/: test_simulate_wave_propagation.py
tests/benchmark/: accuracy_vs_kwave.ipynb  accuracy_vs_kwave.py  kwave_solver.m  kwave_solver_3D.m  profiling_time_simulations.py  test.py
tests/black_box_tests/: readme_exampe.py
tests/geometry/: test_geometry.py  test_medium.py  (+1 more)
(+34 files in other folders)
