[tool.poetry]
name = "jwave"
version = "0.2.1"
description = "Fast and differentiable acoustic simulations in JAX."
authors = [
  "Antonio Stanziola <a.stanziola@ucl.ac.uk>",
  "Simon Arridge",
  "Ben T. Cox",
  "Bradley E. Treeby",
]
readme = "README.md"
keywords = [
  "jax",
  "acoustics",
  "simulation",
  "ultrasound",
  "differentiable-programming"
]
license = "LGPL-3.0-only"
classifiers=[
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Environment :: GPU",
  "Environment :: GPU :: NVIDIA CUDA",
  "Environment :: GPU :: NVIDIA CUDA :: 11.6",
  "Environment :: GPU :: NVIDIA CUDA :: 11.7",
  "Environment :: GPU :: NVIDIA CUDA :: 11.8",
  "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.0",
  "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.1",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include="jwave", from="." }
]

[tool.poetry.urls]
"Homepage" = "https://ucl-bug.github.io/jwave/"
"Repository" = "https://github.com/ucl-bug/jwave"
"Bug Tracker" = "https://github.com/ucl-bug/jwave/issues"
"Support" = "https://discord.gg/VtUb4fFznt"

[tool.poetry.dependencies]
python = "^3.9"
jaxdf = "^0.2.8"
matplotlib = "^3.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
pytest = "^7.2.0"
pre-commit = "^3.3.3"
pycln = "^2.1.5"
isort = "^5.12.0"
griffe = "^0.29.1"
mkdocs-material = "^9.1.16"
mkdocstrings = "^0.22.0"
mkdocs-jupyter = "^0.24.1"
mkdocs-macros-plugin = "^1.0.1"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocstrings-python = "^1.1.2"
python-kacl = "^0.4.6"
pymdown-extensions = "^10.0.1"
plumkdocs = "0.0.2"
tqdm = "^4.65.0"
opencv-python = "^4.7.0.72"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tools.isort]
src_paths = ["jwave", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pycln]
all = true

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true
allow_redefinition = true

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.pytest.ini_options]
addopts = """\
    --doctest-modules\
"""

[tool.pytest_env]
CUDA_VISIBLE_DEVICES = ""

[tool.coverage.report]
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]
